duktape-sys/src/wrapper.h

const char * duk_push_string_file(duk_context * ctx, const char * path);
void duk_eval_file(duk_context * ctx, const char * path);
void duk_eval_file_noresult(duk_context * ctx, const char * path);
duk_int_t duk_peval_file(duk_context * ctx, const char * path);
duk_int_t duk_peval_file_noresult(duk_context * ctx, const char * path);
void duk_compile_file(duk_context * ctx, duk_uint_t flags, const char * path);
duk_int_t duk_pcompile_file(duk_context * ctx, duk_uint_t flags, const char * path);
void duk_dump_context_stdout(duk_context * ctx);
void duk_dump_context_stderr(duk_context * ctx);