duktape-sys/src/ffi.rs

extern "C" {
    pub fn duk_debugger_pause(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_get_now(ctx: *mut duk_context) -> duk_double_t;
}
extern "C" {
    pub fn duk_time_to_components(
        ctx: *mut duk_context,
        timeval: duk_double_t,
        comp: *mut duk_time_components,
    );
}
extern "C" {
    pub fn duk_components_to_time(
        ctx: *mut duk_context,
        comp: *mut duk_time_components,
    ) -> duk_double_t;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union duk_double_union {
    pub d: f64,
    pub f: [f32; 2usize],
    pub ull: [duk_uint64_t; 1usize],
    pub ui: [duk_uint32_t; 2usize],
    pub us: [duk_uint16_t; 4usize],
    pub uc: [duk_uint8_t; 8usize],
    _bindgen_union_align: u64,
}
#[test]
fn bindgen_test_layout_duk_double_union() {
    assert_eq!(
        ::std::mem::size_of::<duk_double_union>(),
        8usize,
        concat!("Size of: ", stringify!(duk_double_union))
    );
    assert_eq!(
        ::std::mem::align_of::<duk_double_union>(),
        8usize,
        concat!("Alignment of ", stringify!(duk_double_union))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_double_union>())).d as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_double_union),
            "::",
            stringify!(d)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_double_union>())).f as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_double_union),
            "::",
            stringify!(f)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_double_union>())).ull as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_double_union),
            "::",
            stringify!(ull)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_double_union>())).ui as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_double_union),
            "::",
            stringify!(ui)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_double_union>())).us as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_double_union),
            "::",
            stringify!(us)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<duk_double_union>())).uc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(duk_double_union),
            "::",
            stringify!(uc)
        )
    );
}
extern "C" {
    pub fn duk_logging_init(ctx: *mut duk_context, flags: duk_uint_t);
}
extern "C" {
    pub fn duk_log_va(
        ctx: *mut duk_context,
        level: duk_int_t,
        fmt: *const ::std::os::raw::c_char,
        ap: *mut __va_list_tag,
    );
}
extern "C" {
    pub fn duk_log(
        ctx: *mut duk_context,
        level: duk_int_t,
        fmt: *const ::std::os::raw::c_char,
        ...
    );
}
extern "C" {
    pub fn duk_module_node_peval_main(
        ctx: *mut duk_context,
        path: *const ::std::os::raw::c_char,
    ) -> duk_ret_t;
}
extern "C" {
    pub fn duk_module_node_init(ctx: *mut duk_context);
}
extern "C" {
    pub static DUK_INVALID_INDEX: duk_idx_t;
}
extern "C" {
    pub static DUK_VARARGS: duk_int_t;
}
extern "C" {
    pub fn duk_create_heap_default() -> *mut duk_context;
}
extern "C" {
    pub fn duk_xmove_top(to_ctx: *mut duk_context, from_ctx: *mut duk_context, count: duk_idx_t);
}
extern "C" {
    pub fn duk_xcopy_top(to_ctx: *mut duk_context, from_ctx: *mut duk_context, count: duk_idx_t);
}
extern "C" {
    pub fn duk_push_string_file(
        ctx: *mut duk_context,
        path: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_push_thread(ctx: *mut duk_context) -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_thread_new_globalenv(ctx: *mut duk_context) -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_error_object(
        ctx: *mut duk_context,
        err_code: duk_errcode_t,
        fmt: *const ::std::os::raw::c_char,
    ) -> duk_idx_t;
}
extern "C" {
    pub fn duk_push_buffer(
        ctx: *mut duk_context,
        size: duk_size_t,
        dynamic: duk_bool_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_push_fixed_buffer(
        ctx: *mut duk_context,
        size: duk_size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_push_dynamic_buffer(
        ctx: *mut duk_context,
        size: duk_size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_push_external_buffer(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_is_callable(ctx: *mut duk_context, index: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_primitive(ctx: *mut duk_context, index: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_object_coercible(ctx: *mut duk_context, index: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_error(ctx: *mut duk_context, index: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_eval_error(ctx: *mut duk_context, index: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_range_error(ctx: *mut duk_context, index: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_reference_error(ctx: *mut duk_context, index: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_syntax_error(ctx: *mut duk_context, index: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_type_error(ctx: *mut duk_context, index: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_uri_error(ctx: *mut duk_context, index: duk_idx_t) -> duk_bool_t;
}
extern "C" {
    pub fn duk_require_type_mask(ctx: *mut duk_context, index: duk_idx_t, mask: duk_uint_t);
}
extern "C" {
    pub fn duk_require_callable(ctx: *mut duk_context, index: duk_idx_t);
}
extern "C" {
    pub fn duk_require_object_coercible(ctx: *mut duk_context, index: duk_idx_t);
}
extern "C" {
    pub fn duk_to_buffer(
        ctx: *mut duk_context,
        index: duk_idx_t,
        out_size: *mut duk_size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_to_fixed_buffer(
        ctx: *mut duk_context,
        index: duk_idx_t,
        out_size: *mut duk_size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_to_dynamic_buffer(
        ctx: *mut duk_context,
        index: duk_idx_t,
        out_size: *mut duk_size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_safe_to_string(
        ctx: *mut duk_context,
        index: duk_idx_t,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn duk_eval(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_eval_noresult(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_peval(ctx: *mut duk_context) -> duk_int_t;
}
extern "C" {
    pub fn duk_peval_noresult(ctx: *mut duk_context) -> duk_int_t;
}
extern "C" {
    pub fn duk_compile(ctx: *mut duk_context, flags: duk_uint_t);
}
extern "C" {
    pub fn duk_pcompile(ctx: *mut duk_context, flags: duk_uint_t) -> duk_int_t;
}
extern "C" {
    pub fn duk_eval_string(ctx: *mut duk_context, src: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn duk_eval_string_noresult(ctx: *mut duk_context, src: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn duk_peval_string(ctx: *mut duk_context, src: *const ::std::os::raw::c_char)
        -> duk_int_t;
}
extern "C" {
    pub fn duk_peval_string_noresult(
        ctx: *mut duk_context,
        src: *const ::std::os::raw::c_char,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_compile_string(
        ctx: *mut duk_context,
        flags: duk_uint_t,
        src: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn duk_compile_string_filename(
        ctx: *mut duk_context,
        flags: duk_uint_t,
        src: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn duk_pcompile_string(
        ctx: *mut duk_context,
        flags: duk_uint_t,
        src: *const ::std::os::raw::c_char,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_pcompile_string_filename(
        ctx: *mut duk_context,
        flags: duk_uint_t,
        src: *const ::std::os::raw::c_char,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_eval_lstring(
        ctx: *mut duk_context,
        buf: *const ::std::os::raw::c_char,
        len: duk_size_t,
    );
}
extern "C" {
    pub fn duk_eval_lstring_noresult(
        ctx: *mut duk_context,
        buf: *const ::std::os::raw::c_char,
        len: duk_size_t,
    );
}
extern "C" {
    pub fn duk_peval_lstring(
        ctx: *mut duk_context,
        buf: *const ::std::os::raw::c_char,
        len: duk_size_t,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_peval_lstring_noresult(
        ctx: *mut duk_context,
        buf: *const ::std::os::raw::c_char,
        len: duk_size_t,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_compile_lstring(
        ctx: *mut duk_context,
        flags: duk_uint_t,
        buf: *const ::std::os::raw::c_char,
        len: duk_size_t,
    );
}
extern "C" {
    pub fn duk_compile_lstring_filename(
        ctx: *mut duk_context,
        flags: duk_uint_t,
        buf: *const ::std::os::raw::c_char,
        len: duk_size_t,
    );
}
extern "C" {
    pub fn duk_pcompile_lstring(
        ctx: *mut duk_context,
        flags: duk_uint_t,
        buf: *const ::std::os::raw::c_char,
        len: duk_size_t,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_pcompile_lstring_filename(
        ctx: *mut duk_context,
        flags: duk_uint_t,
        buf: *const ::std::os::raw::c_char,
        len: duk_size_t,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_eval_file(ctx: *mut duk_context, path: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn duk_eval_file_noresult(ctx: *mut duk_context, path: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn duk_peval_file(ctx: *mut duk_context, path: *const ::std::os::raw::c_char) -> duk_int_t;
}
extern "C" {
    pub fn duk_peval_file_noresult(
        ctx: *mut duk_context,
        path: *const ::std::os::raw::c_char,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_compile_file(
        ctx: *mut duk_context,
        flags: duk_uint_t,
        path: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn duk_pcompile_file(
        ctx: *mut duk_context,
        flags: duk_uint_t,
        path: *const ::std::os::raw::c_char,
    ) -> duk_int_t;
}
extern "C" {
    pub fn duk_dump_context_stdout(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_dump_context_stderr(ctx: *mut duk_context);
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
